src/loadext.zig

//! Zig port of SQLite's src/loadext.c — run-time loadable-extension support.
//!
//! Exported (C-ABI) external symbols — the complete external set that
//! upstream loadext.c defines, so this TU can wholesale-replace loadext.c:
//!   - sqlite3_load_extension
//!   - sqlite3_enable_load_extension
//!   - sqlite3CloseExtensions
//!   - sqlite3_auto_extension
//!   - sqlite3_cancel_auto_extension
//!   - sqlite3_reset_auto_extension
//!   - sqlite3AutoLoadExtensions
//! Static helpers (sqlite3LoadExtension) stay module-private.
//!
//! ─── The sqlite3_api_routines dispatch table ────────────────────────────────
//! `sqlite3Apis` is a file-`static` (NOT exported) const table of 279 function
//! pointers passed to every extension's init routine so the extension can call
//! back into the library. Every member of `struct sqlite3_api_routines`
//! (sqlite3ext.h) is a function pointer, so under x86-64 the whole struct is
//! exactly an array of 279 pointer-sized slots; we mirror it as
//! `[279]?*const anyopaque`, identical in layout to the C struct.
//!
//! The ORDER and the NULL slots were extracted mechanically by preprocessing
//! the exact initializer from loadext.c (lines 133..539) under THIS project's
//! build flags (see build.zig `sqlite_flags`) and reading back which slots the
//! preprocessor reduced to a literal 0. Result: 279 entries, 276 real symbols,
//! 3 NULLs at indices:
//!     63  -> global_recover   (always 0 in source; deprecated)
//!     172 -> unlock_notify     (SQLITE_ENABLE_UNLOCK_NOTIFY is OFF)
//!     240 -> normalized_sql    (SQLITE_ENABLE_NORMALIZE is OFF)
//! Build-config notes that pin the non-NULL slots in THIS build:
//!   * SQLITE_OMIT_DEPRECATED OFF -> aggregate_count, expired, thread_cleanup,
//!     transfer_bindings, trace, profile are REAL (not 0).
//!   * SQLITE_THREADSAFE=1, no SQLITE_MUTEX_OMIT -> the 5 mutex_* slots REAL.
//!   * SQLITE_ENABLE_CARRAY ON -> carray_bind / carray_bind_v2 REAL.
//!   * No OMIT_UTF16/VIRTUALTABLE/WAL/DESERIALIZE/COMPLETE/DECLTYPE/GET_TABLE/
//!     INCRBLOB/SHARED_CACHE/AUTHORIZATION/PROGRESS_CALLBACK/TRACE -> those slots REAL.
//!   * ENABLE_COLUMN_METADATA OFF -> upstream `#ifndef ... #define X 0` makes the
//!     6 column_database/table/origin_name(16) slots NULL (the symbols do not
//!     exist in this build). They are `null` in the table below.
//! If the api table is wrong (order or a stray NULL) loadable extensions break
//! silently, so the list below is machine-generated, not hand-typed.
//!
//! ─── Config assumptions (true in this build) ────────────────────────────────
//!   * SQLITE_OMIT_LOAD_EXTENSION OFF  -> load/enable paths compiled.
//!   * SQLITE_THREADSAFE=1             -> STATIC_MAIN mutex guards the autoext list.
//!   * SQLITE_OMIT_AUTOINIT OFF        -> auto_extension/reset call sqlite3_initialize.
//!   * SQLITE_OMIT_WSD OFF             -> wsdAutoext == the sqlite3Autoext global directly.
//!   * SQLITE_ENABLE_API_ARMOR OFF     -> the armor null-checks are not compiled.
//!   * SQLITE_OS_UNIX (not WIN/APPLE)  -> sole shared-lib ending is "so".
//!
//! Validated only through the engine (loadext / autoextension TCL tests); no
//! standalone unit test is possible (every path couples to a live connection,
//! the VFS dlopen layer, and the global mutex subsystem).

const std = @import("std");
const c_layout = @import("c_layout.zig");
const L = c_layout.c;

// ─── Result codes / constants (sqliteInt.h) ─────────────────────────────────
const SQLITE_OK: c_int = 0;
const SQLITE_ERROR: c_int = 1;
const SQLITE_NOMEM: c_int = 7;
const SQLITE_MISUSE: c_int = 21;
// SQLITE_NOMEM_BKPT == SQLITE_NOMEM in non-debug builds.
const SQLITE_NOMEM_BKPT: c_int = SQLITE_NOMEM;
const SQLITE_OK_LOAD_PERMANENTLY: c_int = 256; // SQLITE_OK | (2<<8)

// sqlite3.flags bits (sqliteInt.h)
const SQLITE_LoadExtension: u64 = 0x0000000000010000;
const SQLITE_LoadExtFunc: u64 = 0x0000000000020000;

// Misc limits / mutex ids
const SQLITE_MAX_PATHLEN: u64 = 4096;
const SQLITE_MUTEX_STATIC_MAIN: c_int = 2;

// ctype bits (sqliteInt.h): Isalpha=0x02, Isdigit=0x04
const CC_ALPHA: u8 = 0x02;
const CC_DIGIT: u8 = 0x04;

// ─── sqlite3 connection field offsets (ground truth, this build) ─────────────
// pVfs/flags/mallocFailed/mutex already exist in c_layout; aExtension/nExtension
// are new (requested as P() lines in the report).
const off_pVfs: usize = if (@hasDecl(L, "sqlite3_pVfs")) L.sqlite3_pVfs else 0;
const off_mutex: usize = if (@hasDecl(L, "sqlite3_mutex")) L.sqlite3_mutex else 24;
const off_flags: usize = if (@hasDecl(L, "sqlite3_flags")) L.sqlite3_flags else 48;
const off_nExtension: usize = if (@hasDecl(L, "sqlite3_nExtension")) L.sqlite3_nExtension else 228;
const off_aExtension: usize = if (@hasDecl(L, "sqlite3_aExtension")) L.sqlite3_aExtension else 232;

inline fn dbBase(db: ?*anyopaque) [*]u8 {
    return @ptrCast(db.?);
}
inline fn dbPVfs(db: ?*anyopaque) ?*anyopaque {
    const p: *align(1) const ?*anyopaque = @ptrCast(dbBase(db) + off_pVfs);
    return p.*;
}
inline fn dbMutex(db: ?*anyopaque) ?*anyopaque {
    const p: *align(1) const ?*anyopaque = @ptrCast(dbBase(db) + off_mutex);
    return p.*;
}
inline fn dbFlagsPtr(db: ?*anyopaque) *align(1) u64 {
    return @ptrCast(dbBase(db) + off_flags);
}
inline fn dbNExtensionPtr(db: ?*anyopaque) *align(1) c_int {
    return @ptrCast(dbBase(db) + off_nExtension);
}
inline fn dbAExtensionPtr(db: ?*anyopaque) *align(1) ?[*]?*anyopaque {
    return @ptrCast(dbBase(db) + off_aExtension);
}

// ─── extern C globals / helpers (resolved at link time) ─────────────────────
// sqlite3CtypeMap is read-only here; mutable globals would need `extern var`,
// but this lookup table is genuinely const — still declared `var` to dodge the
// optimizer-CSE gotcha noted in PROGRESS.
extern var sqlite3CtypeMap: [256]u8;
extern var sqlite3UpperToLower: [256]u8;

extern fn sqlite3_mprintf(zFormat: [*:0]const u8, ...) callconv(.c) ?[*:0]u8;
extern fn sqlite3_snprintf(n: c_int, zBuf: [*]u8, zFormat: [*:0]const u8, ...) callconv(.c) ?[*:0]u8;
extern fn sqlite3_free(p: ?*anyopaque) callconv(.c) void;
extern fn sqlite3_malloc64(n: u64) callconv(.c) ?*anyopaque;
extern fn sqlite3_realloc64(p: ?*anyopaque, n: u64) callconv(.c) ?*anyopaque;
extern fn sqlite3_mutex_enter(p: ?*anyopaque) callconv(.c) void;
extern fn sqlite3_mutex_leave(p: ?*anyopaque) callconv(.c) void;
extern fn sqlite3_strnicmp(a: ?[*:0]const u8, b: ?[*:0]const u8, n: c_int) callconv(.c) c_int;
extern fn sqlite3_initialize() callconv(.c) c_int;

extern fn sqlite3MutexAlloc(id: c_int) callconv(.c) ?*anyopaque;
extern fn sqlite3ApiExit(db: ?*anyopaque, rc: c_int) callconv(.c) c_int;
extern fn sqlite3DbMallocZero(db: ?*anyopaque, n: u64) callconv(.c) ?*anyopaque;
extern fn sqlite3DbFree(db: ?*anyopaque, p: ?*anyopaque) callconv(.c) void;
extern fn sqlite3Strlen30(z: ?[*:0]const u8) callconv(.c) c_int;
extern fn sqlite3ErrorWithMsg(db: ?*anyopaque, rc: c_int, zFormat: [*:0]const u8, ...) callconv(.c) void;

// OS dynamic-loader shims (os.h). DlSym returns a generic function pointer.
const VoidFn = *const fn () callconv(.c) void;
extern fn sqlite3OsDlOpen(pVfs: ?*anyopaque, zPath: [*:0]const u8) callconv(.c) ?*anyopaque;
extern fn sqlite3OsDlError(pVfs: ?*anyopaque, nByte: c_int, zErr: [*]u8) callconv(.c) void;
extern fn sqlite3OsDlSym(pVfs: ?*anyopaque, handle: ?*anyopaque, zSym: [*:0]const u8) callconv(.c) ?VoidFn;
extern fn sqlite3OsDlClose(pVfs: ?*anyopaque, handle: ?*anyopaque) callconv(.c) void;

extern fn strlen(s: [*:0]const u8) callconv(.c) usize;
extern fn memcpy(noalias d: ?*anyopaque, noalias s: ?*const anyopaque, n: usize) callconv(.c) ?*anyopaque;

// The extension init entry point: int (*)(sqlite3*, char**, const sqlite3_api_routines*)
const LoadextEntry = *const fn (?*anyopaque, *?[*:0]u8, ?*const anyopaque) callconv(.c) c_int;

inline fn isalpha(c: u8) bool {
    return (sqlite3CtypeMap[c] & CC_ALPHA) != 0;
}
inline fn isdigit(c: u8) bool {
    return (sqlite3CtypeMap[c] & CC_DIGIT) != 0;
}
// DirSep(X): unix => X=='/'
inline fn dirSep(c: u8) bool {
    return c == '/';
}
